feat(jdk17): Upgrade JDK17